--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ flask==2.3.2
 flask_cors==3.0.10
 pandas==2.0.1
 openpyxl==3.1.2
-openai==0.27.6
+openai==1.3.4
 gunicorn==20.1.0
 xlsxwriter==3.1.0
 google-cloud-tasks==2.13.1
 sendgrid===6.10.0
 google-cloud-firestore==2.11.1
 google-cloud-storage==2.9.0
+python-dotenv==1.0.0
+httpx==0.25.1
